--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -19,7 +19,7 @@ Experiment? \todo{reprendre la review daglar}
 \todo{how to detect TS}
 
 Fast kinetic Monte Carlo
-tutrast\cite{Mace_2019}
+tutrast\autocite{Mace_2019}
 
 \section{ML modeling}
 
