--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -17,18 +17,18 @@ Final screening step, easy integration into the workflow of current sreenings
 
 \subsection{Problem definition}
 
-Best materials use polarization effects \cite{Li_2019,Pei_2022}
+Best materials use polarization effects \autocite{Li_2019,Pei_2022}
 
 Talk about the order of magnitude of the different interactions > charge--(induced dipole high magnitude)
 
-Standard methods failing to describe oms\cite{Perry_2014} 
+Standard methods failing to describe oms\autocite{Perry_2014} 
 
 \todo{faire référence à 2-thermo partie sur les interactions\ref{sct:interaction}}
 
 
 \subsection{Studying the polarization}
 
-Inspired by works on the subject\cite{Lachet_1998,Becker_2017} 
+Inspired by works on the subject\autocite{Lachet_1998,Becker_2017} 
 
 \todo{essayer d'ajouter la polarisabilité pour PEI et al. et Li et al.}
 
@@ -37,7 +37,7 @@ Open Metal Sites/polar groups
 \todo{20220421\_pres}
 
 \todo{Not the best material, but interesting discussion on open metal site effect}
-Tao et al.\cite{Tao_2020} looked at tuning (and improving) the selective adsorption of Xe over Kr by MOF open metal sites in the UTSA-74 framework structure.
+Tao et al.\autocite{Tao_2020} looked at tuning (and improving) the selective adsorption of Xe over Kr by MOF open metal sites in the UTSA-74 framework structure.
 
 
 \subsection{Perpectives}
