--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,7 @@
     sorting=none,
     citestyle=numeric-comp,
     defernumbers=true,
+    autocite = superscript
 ]{biblatex}
 \DeclareCiteCommand{\citenum}
   {}
